--- a/exelente_ru/schools.html
+++ b/exelente_ru/schools.html
@@ -34,6 +34,7 @@
                 </div>
               </div>
             </div>
+            <div class="top-block__fill"></div>
             <div class="top-block__phone">8 800 737-77-05</div>
             <div class="top-block__popups">
               <div class="top-block__item top-block__item_login">Вход/ Регистрация<i class="fa fa-user" aria-hidden="true"></i></div>
@@ -54,14 +55,18 @@
               <div class="hidden-menu__item top-block__item">2500 р<i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
             </div>
             <div class="hidden-menu__menu">Меню
-              <div class="hidden-menu__close"><i class="fa fa-times" aria-hidden="true"></i></div>
+              <div class="hidden-menu__close">
+                <div class="hidden-menu__close-pic"></div>
+              </div>
             </div>
           </div>
         </div>
         <div class="header__menu menu-block">
           <div class="wrapper header__wrapper">
             <h1 class="menu-block__logo"><a href="index.html"><img src="img/logo_white.png" alt=""/></a><i class="fa fa-search" aria-hidden="true"></i></h1>
-            <div class="menu-block__menu-pic"></div>
+            <div class="menu-block__menu-pic">
+              <div class="menu-block__menu-pic_close"><i class="fa fa-times" aria-hidden="true"></i></div>
+            </div>
             <div class="menu-block__contacts contacts">
               <div class="contacts__item">
                 <p class="contacts__text">Бесплатная линия</p>
@@ -187,74 +192,278 @@
       <div class="title">
         <h2 class="section-name">школы</h2>
         <form>
-          <select class="school-selection"> 
-            <option value="">Показать по 9</option>
-            <option value="" autofocus="autofocus">9</option>
-            <option value="">18</option>
-            <option value="">36</option>
+          <select>
+            <option>Показать по 9</option>
+            <option>9</option>
+            <option>18</option>
+            <option>36</option>
           </select>
         </form>
       </div>
-      <section class="content content_schools">
+      <section class="content content__schools">
         <aside class="sidebar">
           <section class="sidebar__part">
             <h3>Программа
               <div class="sidebar-arrow arrow-down"></div>
             </h3>
+            <ul class="choose-program__checkboxes">
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Каникулярные программы</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Языковые курсы</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Среднее образование</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Высшее образование</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Работа</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Стажировка</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Стипендии и гранты</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Волонтерство</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Международные экзамены</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Ознакомительные поездки</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Foundation</span>
+                </label>
+              </li>
+            </ul>
           </section>
           <section class="sidebar__part">
             <h3>Специальности
-              <div class="sidebar-arrow arrow-up"></div>
+              <div class="sidebar-arrow arrow-down"></div>
             </h3>
+            <ul class="choose-specialty__checkboxes">
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Менеджмент, бизнес и управление</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Строительство, архитектура</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Сельское и лесное хозяйство</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Искусство, мода и дизайн</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Инженерия и IT</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Гостеприимство и туризм</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Правоведение</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Международные отношения и политика</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Медицина</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Физическая культура и спорт</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Режиссура и кинематография</span>
+                </label>
+              </li>
+            </ul>
           </section>
           <section class="sidebar__part">
             <h3>Страны
-              <div class="sidebar-arrow arrow-up"></div>
+              <div class="sidebar-arrow arrow-down"></div>
             </h3>
             <ul class="choose-country__checkboxes">
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="США"/><span class="checkbox-custom"></span><span class="label">США</span>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">США</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Канада"/><span class="checkbox-custom"></span><span class="label">Канада</span>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Канада</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Австралия"/><span class="checkbox-custom"></span><span class="label">Австралия</span>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Австралия</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Новая Зеландия"/><span class="checkbox-custom"></span><span class="label">Новая Зеландия</span>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Новая Зеландия</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Сингапур"/><span class="checkbox-custom"></span><span class="label">Сингапур</span>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Сингапур</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Япония"/><span class="checkbox-custom"></span><span class="label">Япония</span>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Япония</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Корея" checked=""/><span class="checkbox-custom"></span><span class="label">Корея</span>
+                  <input class="custom__checkbox" type="checkbox" name="" checked=""/><span class="checkbox-custom"></span><span class="label">Корея</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Филиппины"/><span class="checkbox-custom"></span><span class="label">Филиппины</span>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Филиппины</span>
                 </label>
               </li>
-            </ul><a class="show-all" href="#">показать все</a>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Ирландия</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Чехия</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Испания</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Германия</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Мальта</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Таиланд</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Сайпан</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Вьетнам</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">ОАЭ</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Канада</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Кипр</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Китай</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Англия</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Индонезия</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Куба</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Мексика</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Малайзия</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Франция</span>
+                </label>
+              </li>
+            </ul><a class="show-all" href="#">Показать все</a>
             <section class="sidebar__part filters">
-              <button class="button__action apply" type="button" value=""> <a href="#">Применить</a></button><a class="reset-filter" href="#">Сбросить фильтр</a>
+              <button class="button__action apply" type="button" value=""><a href="#">Применить</a></button><a class="reset-filter" href="#">Сбросить фильтр</a>
             </section>
           </section>
         </aside>
@@ -370,7 +579,7 @@
         </main>
       </section>
       <nav class="schools-catalogue__pagination">
-        <div class="pagi-nav-wrapper"><a class="active" href="#">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="">...</a><a href="#">125</a><a class="pagi-arrow pagi-arrow-forward" href="#"></a></div>
+        <div class="pagi-nav-wrapper"><a href="#">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="">...</a><a href="#">125</a><a class="pagi-arrow pagi-arrow-forward" href="#"></a></div>
       </nav>
       <footer class="footer">
         <div class="footer__top">
@@ -398,8 +607,7 @@
                 <div class="footer__social-link footer__social-link_instagram"></div></a><a href="#">
                 <div class="footer__social-link footer__social-link_fb"></div></a><a href="#">
                 <div class="footer__social-link footer__social-link_youtube"></div></a><a href="#">
-                <div class="footer__social-link footer__social-link_vk"></div></a></div>
-            <input class="subscribe__submit" type="submit" value="Подписаться на рассылку"/>
+                <div class="footer__social-link footer__social-link_vk"></div></a></div><a class="subscribe__submit" href="#" type="submit">Подписаться на рассылку</a>
           </div>
         </div>
         <div class="footer__bottom">
