--- a/exelenteRu/password-restore-success.html
+++ b/exelenteRu/password-restore-success.html
@@ -13,12 +13,11 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
-    <script>
+<!--     <script>
       $(window).resize(function(){
       window.setTimeout('location.reload()', 500);
-      });
-      
-    </script>
+      });      
+    </script> -->
     <link rel="stylesheet" href="css/password-restore.css"/>
   </head>
   <body>
